--- a/vi/lien-he.html
+++ b/vi/lien-he.html
@@ -131,7 +131,7 @@ img.emoji {
 		<nav id="navigation" class="col-full" role="navigation">
 			
 			<ul id="main-nav" class="nav"><li class="home"><a href="he-quan-tri-doanh-nghiep-my-pham-fory.html"><span>Trang chủ</span></a></li><li id="menu-item-672" class="fory-nav menu-item menu-item-type-post_type menu-item-object-page menu-item-home menu-item-672"><a href="he-quan-tri-doanh-nghiep-my-pham-fory.html">Hệ quản trị Fory</a></li>
-<li id="menu-item-773" class="sign-nav menu-item menu-item-type-post_type menu-item-object-page menu-item-773"><a href="../index.html%3Fp=771.html">Chữ ký điện tử</a></li>
+<li id="menu-item-773" class="sign-nav menu-item menu-item-type-post_type menu-item-object-page menu-item-773"><a href="../vi/chu-ky-dien-tu.html">Chữ ký điện tử</a></li>
 <li id="menu-item-689" class="exp-nav menu-item menu-item-type-taxonomy menu-item-object-category menu-item-689"><a href="category/tin-tuc.html">Tin tức</a></li>
 </ul>	
 		</nav><!-- /#navigation -->
