--- a/index.html?p=147.html
+++ b/index.html?p=147.html
@@ -302,7 +302,7 @@ Example <strong>you are viewing a photos of an album in Galary App</strong>. Ple
 		<hr />
 		<div class="copy-content">
 			<div id="copyright" class="col-left">
-							<p>Copyright &copy; 2023 Spro Group. All Rights Reserved.</p>
+							<p>Copyright &copy; 2024 SPROGROUP CO.,LTD. All Rights Reserved.</p>
 						</div>
 
 			<div id="credit" class="col-right">
