--- a/index.html?p=694.html
+++ b/index.html?p=694.html
@@ -172,11 +172,11 @@ img.emoji {
 
 
 
-<p><strong>SPROGROUP CORPORATION</strong><br><strong>Địa chỉ:</strong>&nbsp;Cầu Giấy, Hà Nội, Việt Nam.<br><strong>Điện thoại:</strong></p>
+<p><strong>CÔNG TY TNHH GIẢI PHÁP THÔNG MINH SPROGROUP</strong><br><strong>Địa chỉ:</strong>&nbsp;77 Triệu Túc, Thuận Thành, Phổ Yên, Thái Nguyên, Việt Nam.<br><strong>Điện thoại:</strong></p>
 
 
 
-<p>– Maketing: 0986155481 <br>– Kỹ thuật: 0389981224, 098 3014869 </p>
+<p>– Maketing: 0972286297 <br>– Kỹ thuật: 0946080990 </p>
 
 
 
@@ -242,7 +242,7 @@ img.emoji {
 		<hr />
 		<div class="copy-content">
 			<div id="copyright" class="col-left">
-							<p>Copyright &copy; 2023 Spro Group. All Rights Reserved.</p>
+							<p>Copyright &copy; 2024 SPROGROUP CO.,LTD. All Rights Reserved.</p>
 						</div>
 
 			<div id="credit" class="col-right">
