--- a/vi/lien-he.html
+++ b/vi/lien-he.html
@@ -172,7 +172,7 @@ img.emoji {
 
 
 
-<p><strong>SPROGROUP CORPORATION</strong><br><strong>Địa chỉ:</strong>&nbsp;Cầu Giấy, Hà Nội, Việt Nam.<br><strong>Điện thoại:</strong></p>
+<p><strong>CÔNG TY TNHH GIẢI PHÁP THÔNG MINH SPROGROUP</strong><br><strong>Địa chỉ:</strong>&nbsp;Cầu Giấy, Hà Nội, Việt Nam.<br><strong>Điện thoại:</strong></p>
 
 
 
@@ -242,7 +242,7 @@ img.emoji {
 		<hr />
 		<div class="copy-content">
 			<div id="copyright" class="col-left">
-							<p>Copyright &copy; 2023 Spro Group. All Rights Reserved.</p>
+							<p>Copyright &copy; 2024 SPROGROUP CO.,LTD. All Rights Reserved.</p>
 						</div>
 
 			<div id="credit" class="col-right">
