--- a/index.html?p=13.html
+++ b/index.html?p=13.html
@@ -239,7 +239,7 @@ var _zxcvbnSettings = {"src":"https:\/\/www.sprogroup.com\/wp-includes\/js\/zxcv
 		<hr />
 		<div class="copy-content">
 			<div id="copyright" class="col-left">
-							<p>Copyright &copy; 2023 Spro Group. All Rights Reserved.</p>
+							<p>Copyright &copy; 2024 SPROGROUP CO.,LTD. All Rights Reserved.</p>
 						</div>
 
 			<div id="credit" class="col-right">
