--- a/vi/lien-he.html
+++ b/vi/lien-he.html
@@ -176,7 +176,7 @@ img.emoji {
 
 
 
-<p>– Maketing: 0986155481 <br>– Kỹ thuật: 0389981224, 098 3014869 </p>
+<p>– Maketing: 0972286297 <br>– Kỹ thuật: 0946080990 </p>
 
 
 
